# portal-ai-content

./: .gitignore
yt-automation-onefact-ind/: .gitignore  _runner_long.py  app.py  app.py.ori  app.py.ori2  app.py.save  auth.py  auth.py.ori  main.py  main.py.02112026  main.py.02212026  main.py.save  main.py.save.1  pyproject.toml  requirements.lock.txt  requirements.txt  temp_long_process.json
yt-automation-onefact-ind/core/: auto_manifest_builder.py  auto_render_manager.py  autostock_job_runner.py  avatar_postprocess.py  avatar_rhubarb.py  caption_engine.py  content_cleaner.py  global_settings.py  helpers.py  job_engine.py  job_store.py  postprocess.py  scene_builder.py  stock_fetcher.py  tts_engine.py  tts_engine.py.ori
yt-automation-onefact-ind/manifests/: auto_stock_20260217_063000.json  auto_stock_20260217_063041.json  auto_stock_20260217_064219.json  auto_stock_20260217_064514.json  auto_stock_20260217_064751.json  auto_stock_20260217_065101.json  auto_stock_20260217_065549.json  auto_stock_20260217_065645.json  auto_stock_20260217_070138.json  auto_stock_20260217_070640.json  auto_stock_20260217_070913.json  auto_stock_20260217_071439.json  auto_stock_20260217_071736.json  auto_stock_20260217_071836.json  auto_stock_20260217_072528.json  auto_stock_20260217_072944.json  auto_stock_20260217_073147.json  auto_stock_20260217_073550.json  auto_stock_20260217_074227.json  auto_stock_20260217_075846.json  auto_stock_20260217_081900.json  auto_stock_20260217_082227.json  auto_stock_20260217_083944.json  auto_stock_20260217_084233.json  auto_stock_20260217_084644.json  (+45 more)
(+328 files in other folders)
