[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytautomation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.30",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ytautomation*"]
